// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`h1 component should render with custom color white 1`] = `
.c0 {
  color: #FFFFFF;
  font-family: Avenir Medium,'Avenir Next','Segoe UI', sans-serif;
  font-size: 18px;
  -webkit-letter-spacing: -0.18px;
  -moz-letter-spacing: -0.18px;
  -ms-letter-spacing: -0.18px;
  letter-spacing: -0.18px;
  line-height: 24px;
}

<h1
  className="c0"
  color="white"
>
  Lorem ipsum
</h1>
`;

exports[`h1 component should render with default css properties 1`] = `
.c0 {
  color: #212240;
  font-family: Avenir Medium,'Avenir Next','Segoe UI', sans-serif;
  font-size: 18px;
  -webkit-letter-spacing: -0.18px;
  -moz-letter-spacing: -0.18px;
  -ms-letter-spacing: -0.18px;
  letter-spacing: -0.18px;
  line-height: 24px;
}

<h1
  className="c0"
>
  Lorem ipsum
</h1>
`;
